--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
-  "name": "node-example",
+  "name": "ifwtw",
   "version": "0.0.1",
+  "description": "ifttt to generic webservice bridge",
+  "main": "index.js",
   "dependencies": {
-    "express": "3.1.x"
+    "node-xmpp": "~0.3.2"
   },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:amicojeko/ifwtw.git"
+  },
+  "author": "Jeko 2013",
+  "license": "BSD",
+  "gitHead": "d871deffdf819762f72821edef710f0aaa0dc863",
+  "readmeFilename": "README.md",
   "engines": {
     "node": "0.10.x",
     "npm": "1.2.x"
